import { Controller } from '@nestjs/common';
import { MessagePattern, Payload } from '@nestjs/microservices';
import { RecruitmentRequestsService } from './recruitment-requests.service';

@Controller()
export class RecruitmentRequestsController {
  constructor(private readonly service: RecruitmentRequestsService) {}

  @MessagePattern('recruitment-requests.admin.list')
  listForAdmin(@Payload() payload: any) {
    return this.service.listForAdmin(payload);
  }

  @MessagePattern('recruitment-requests.depthead.create')
  createForDepartmentHead(
    @Payload()
    payload: {
      departmentId: string;
      positionTitle: string;
      headcount: number;
      jobDescription: string;
      justification: string;
      urgency: string;
      skillRequirements?: Record<string, unknown>;
      createdById: string;
      submit?: boolean;
    },
  ) {
    return this.service.createForDepartmentHead(payload);
  }

  @MessagePattern('recruitment-requests.get')
  getById(
    @Payload()
    payload: {
      id: string;
      userId: string;
      role: any;
    },
  ) {
    return this.service.getByIdForActor(payload);
  }

  @MessagePattern('recruitment-requests.depthead.update')
  updateForDepartmentHead(
    @Payload()
    payload: {
      id: string;
      userId: string;
      role?: string;
      positionTitle?: string;
      headcount?: number;
      jobDescription?: string;
      justification?: string;
      urgency?: string;
      skillRequirements?: Record<string, unknown>;
      acceptedHrSuggestion?: boolean;
      revisionResponse?: string;
    },
  ) {
    return this.service.updateForDepartmentHead(payload);
  }

  @MessagePattern('recruitment-requests.depthead.submit')
  submitDraft(@Payload() payload: { id: string; userId: string }) {
    return this.service.submitDraft(payload);
  }

  @MessagePattern('recruitment-requests.depthead.delete')
  deletePending(@Payload() payload: { id: string; userId: string }) {
    return this.service.deletePending(payload);
  }

  @MessagePattern('recruitment-requests.admin.assign')
  assignToHr(
    @Payload()
    payload: {
      id: string;
      hrManagerId: string;
      assignedById: string;
    },
  ) {
    return this.service.assignToHr(payload);
  }

  @MessagePattern('recruitment-requests.admin.decide')
  decide(
    @Payload()
    payload: {
      id: string;
      decision: 'APPROVED' | 'REJECTED';
      comments?: string;
      adminId: string;
      role?: string;
    },
  ) {
    return this.service.decide(payload);
  }

  @MessagePattern('recruitment-requests.admin.request_changes')
  requestChanges(
    @Payload()
    payload: {
      id: string;
      adminId: string;
      feedback: string;
      positionTitle?: string;
      headcount?: number;
      jobDescription?: string;
      justification?: string;
      urgency?: string;
      skillRequirements?: Record<string, unknown>;
    },
  ) {
    return this.service.requestChanges(payload);
  }

  @MessagePattern('recruitment-requests.hr.forward_to_admin')
  forwardToAdmin(
    @Payload()
    payload: {
      id: string;
      hrManagerId: string;
    },
  ) {
    return this.service.forwardToAdmin(payload);
  }

  @MessagePattern('recruitment-requests.hr.return_for_revision')
  returnForRevision(
    @Payload()
    payload: {
      id: string;
      hrManagerId: string;
      feedback: string;
    },
  ) {
    return this.service.returnForRevision(payload);
  }
}
